# stooqpy

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package.yml  stooqpy_pkg_workflow.yml
docs/: index.md  installation.md  usage.md
src/stooqpy/: _check_if_sql_installed.py  cli.py  config.py
src/stooqpy/templates/: settings.py
tests/: test_config.py  test_stooqpy.py
